# ohm

./: .gitignore  .gitmodules  Makefile  Makefile.am  README.md  TODO  TODO.md  autogen.sh  configure.ac  configure.sh  doctor.c  dwarf-util.h  hello.ohm  ohm.lua  ptrace.hs  symbols.c  test.lua  whetdc.c
benchmarks/: Makefile  Makefile.am  counting.c  md_mpi.c  mpi-counting.c
config/: ax_check_cma.m4  ax_check_xpmem.m4
libdwarf/gennames.dSYM/Contents/: Info.plist
libdwarf/gennames.dSYM/Contents/Resources/DWARF/: gennames
paper/: Makefile  OMakefile  lcsect.sty  paper.tex  refs.bib
scripts/: athena.ohm  counting.ohm  fn-tracer.ohm  mpi-counting.ohm  pair.ohm  whetdc.ohm
src/: Makefile  Makefile.am  doctor.c  doctor.h  dwarf-util.c  dwarf-util.h  funcvars.c  lua-util.c  ohm.lua  ohm_xpmem.c  ohm_xpmem.h  ohmd.c  ohmd.h  probes.c  trap.c  types.c  xpmem.c
talk/: OMakefile  ohm.odp  ohm.tex  ohm.wiki
tests/: Makefile.am  counting.c  fn-tracer.c  mpi-counting.c  nbody.c
